Fixed compiler error for .toList()